--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+URL: https://github.com/zkamvar/znktest
+BugReports: https://github.com/zkamvar/znktest/issues
